--- a/research.html
+++ b/research.html
@@ -95,11 +95,18 @@ In recent years, these equations have gained significant attention for their abi
 They combine the effects of two nonlinear diffusion operators with different exponents, which generalizes the classical p-Laplacian and introduces new analytical challenges, such as the absence of homogeneity and uniform ellipticity. 
 My current research extends the techniques we developed for p-Laplacian problems to the (p, q)-Laplacian setting. I will investigate these equations on the exterior of the open, bounded ball \(B_{R}\) in \(\mathbb{R}^N\) and try to obtain similar and/or new results. 
 
+
+</p>
+<p>
+  Learn more about my publications on 
+  <a href="https://scholar.google.com/citations?user=naHvPEoAAAAJ&hl=en" target="_blank">
+    Google Scholar
+  </a>.
 </p>
 
 									
 
-	<h2>Publications</h2>
+	<h2>Publications and Preprints</h2>
       <ul>
         <li><b>[<a href="https://drive.google.com/file/d/1MUri6xvY-mq5bQQ5qIsLU5WUQNoM3P7D/view?usp=sharing" target="_blank" rel="noopener">Preprint</a>] M. S. Ahamed</b>, and J Iaia, <i>Existence of an infinite number of solutions to a singular superlinear p-Laplacian equation on exterior domains</i>, under review, 2025.[<a href="https://doi.org/10.48550/arXiv.2507.18662" target="_blank" rel="noopener">https://doi.org/10.48550/arXiv.2507.18662</a>]</li><br>
         
@@ -198,4 +205,5 @@ My current research extends the techniques we developed for p-Laplacian problems
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
