--- a/conference.html
+++ b/conference.html
@@ -77,7 +77,7 @@
 									<header class="major">
 										<h1>Conference Talks and Attendance</h1>
 										<p class="justified-paragraph">
-										I attend conferences to share my research, learn from others, and exchange ideas. At several mathematics conferences, I have given talks and enjoyed discussions with people from many backgrounds. These events help me connect with others, see new viewpoints, and work together. Each talk I give is a chance to share what I have found and to hear questions and feedback that help me improve my work.
+										I attend conferences and seminars to share my research, learn from others, and exchange ideas. At several mathematics conferences, I have given talks and enjoyed discussions with people from many backgrounds. These events help me connect with others, see new viewpoints, and work together. Each talk I give is a chance to share what I have found and to hear questions and feedback that help me improve my work.
 										</p>
 									</header>
 
@@ -194,4 +194,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
