--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   <article class="card">
     <a href="research.html" class="image">
-      <img src="images/ResearchCardnew" alt="Research and Publications" />
+      <img src="images/ResearchCardnew.jpeg" alt="Research and Publications" />
     </a>
     <h3><a href="research.html">Research and Publications</a></h3>
     <p>Explore my research and read my published papers, preprints, and upcoming work.</p>
@@ -240,3 +240,4 @@
 	</body>
 
 </html>
+
