--- a/conference.html
+++ b/conference.html
@@ -83,6 +83,16 @@
 
 									<div class="posts">
 										
+										<article>
+											<a href="#" class="image"><img src="images/SeminarUNT.jpeg" alt="" /></a>
+											<h3>University of North Texas, Denton | September 2025</h3>
+											<p class="justified-paragraph">
+										    Presented a research talk at the Applied and Computational Mathematics Seminar in the Department of Mathematics at the University of North Texas. 
+											My presentation focused on the existence of infinitely many solutions to a singular superlinear p-Laplacian equation on exterior domains. 
+											The UNT seminar brings together researchers interested in mathematical and computational methods for studying real-world problems. My talk added to the ongoing conversation about new developments in partial differential equations. 
+											</p>
+										</article>
+
 										
 										<article>
 											<a href="#" class="image"><img src="images/ConferenceAandM.jpeg" alt="" /></a>
@@ -196,3 +206,4 @@
 	</body>
 
 </html>
+
