--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										</header>
 										<p class="justified-paragraph"> 
 										Welcome—I'm Suzan Ahamed, a mathematician from Dhaka, Bangladesh, whose academic journey has taken me from the University of Rajshahi to teaching and research positions at Rajshahi University of Engineering and Technology (RUET), and now to PhD studies at the University of North Texas (UNT)—a journey I expect to complete in Spring 2026.
-                    I married Sadia, a UNT graduate in IT, in 2014. We have three children—Safreen, Safeera, and Soukhin—who are all in elementary school. I enjoy spending time with my children and engaging in activities together.<br> 
+                    I married Sadia, a UNT graduate in IT, in 2014. We have three children—Safreen, Safeera, and Soukhin—who are all in elementary school. Most of my free time goes to hanging out with my kids and joining their activities—even when I have absolutely no idea what the rules are.<br> 
                     In addition to mathematics, I have a deep interest in writing. Although I chose mathematics as my profession, writing has always been a strong passion of mine. I am grateful that my enthusiasm for both mathematics and storytelling remains unwavering. 
                     This website was created for many reasons, and my passion for writing is a significant one. I believe that mathematics and research are filled with stories that can inspire others. Through this site, I aim to share these stories with fellow mathematics enthusiasts. 
                     I will post insights from my teaching and research, as well as updates about my academic journey. I will also share stories, some mathematical and some personal, that I hope will resonate with students, educators, and anyone who appreciates mathematics. 
@@ -240,4 +240,5 @@
 	</body>
 
 </html>
+
 
