--- a/teaching.html
+++ b/teaching.html
@@ -78,7 +78,7 @@
 		Additionally, my graduate studies at the University of North Texas (UNT) in Denton provided me with further exposure to teaching. Over the past ten years, I have been the instructor of record (Teaching Fellow) for numerous undergraduate courses, with class sizes ranging from 30 to 120 students. 
 		In some cases, I have also been responsible for multiple teaching assistants who assisted students in recitation/tutorial classes and graded quizzes I assigned. The courses I have taught include:</p>
      <ul>
-       <h3>As a Teaching Fellow at UNT [Fall 2020 &ndash Present]</h3>
+       <h3>As a Teaching Fellow at UNT [Fall 2020--Present]</h3>
         <li>PreCalculus (Spring 2025, Fall 2023)</li>
         <li>Calculus II (Summer 2024, Summer 2023)</li>
         <li>Business Calculus (Spring 2024, Spring 2023, Fall 2022, Spring 2022)</li>
@@ -86,14 +86,14 @@
           
      </ul>
 	 <ul>
-		<h3>As a Teaching Assistant at UNT [Fall 2019 &ndash Spring 2020]</h3>
+		<h3>As a Teaching Assistant at UNT [Fall 2019--Spring 2020]</h3>
           <li> PreCalculus (Fall 2019)</li>
             <li> Calculus I (Spring 2020)</li>
               <li> Calculus II (Spring 2020)</li>
 	 </ul>
 
 	  <ul>
-		<h3>As a Lecturer/Assistant Professor at RUET [February 2012 &ndash July 2019]</h3>
+		<h3>As a Lecturer/Assistant Professor at RUET [February 2012--July 2019]</h3>
 
               <li>Linear Algebra</li>
 			  <li>College Algebra</li>
@@ -180,3 +180,4 @@
 	</body>
 
 </html>
+
