--- a/teaching.html
+++ b/teaching.html
@@ -93,7 +93,7 @@
 	 </ul>
 
 	  <ul>
-		<h3>As a Lecturer/Assistant Professor at RUET [February 2012-July 2019]</h3>
+		<h3>As a Lecturer/Assistant Professor at RUET [February 2012–July 2019]</h3>
 
               <li>Linear Algebra</li>
 			  <li>College Algebra</li>
@@ -180,5 +180,6 @@
 	</body>
 
 </html>
+
 
 
