--- a/teaching.html
+++ b/teaching.html
@@ -79,8 +79,8 @@
 		In some cases, I have also been responsible for multiple teaching assistants who assisted students in recitation/tutorial classes and graded quizzes I assigned. The courses I have taught include:</p>
      <ul>
        <h3>As a Teaching Fellow at UNT [Fall 2020–Present]</h3>
-        <li>PreCalculus (Spring 2025, Fall 2023)</li>
         <li>Calculus II (Summer 2024, Summer 2023)</li>
+		<li>PreCalculus (Spring 2026, Spring 2025, Fall 2023)</li>
         <li>Business Calculus (Spring 2024, Spring 2023, Fall 2022, Spring 2022)</li>
         <li>College Math for Business, Economics, and Related Fields (Fall 2025, Fall 2024, Fall 2021, Spring 2021, Fall 2020)</li>
           
@@ -180,6 +180,7 @@
 	</body>
 
 </html>
+
 
 
 
