--- a/conference.html
+++ b/conference.html
@@ -82,6 +82,15 @@
 									</header>
 
 									<div class="posts">
+
+										<article>
+											<a href="#" class="image"><img src="images/JMM2026DC.jpeg" alt="" /></a>
+											<h3>Joint Mathematics Meetings, Washington, DC | January 04-07, 2026</h3>
+											<p class="justified-paragraph">
+										    Presented one of my research papers at the Joint Mathematics Meetings, held at the Walter E. Washington Convention Center in Washington, DC. The talk focused on the existence of sign-changing radial solutions of the p-Laplacian equations.
+											It was an incredible experience talking about my research, attending inspiring talks, exploring math exhibitions, and connecting with mathematicians and math enthusiasts from around the world. 
+											</p>
+										</article>
 										
 										<article>
 											<a href="#" class="image"><img src="images/SeminarUNT.jpeg" alt="" /></a>
@@ -206,4 +215,5 @@
 	</body>
 
 </html>
+
 
